# ancient-dna-viz

./: .coverage  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
docs/: API_REFERENCE.md  API_REFERENCE_CN.md  API_REFERENCE_EN.md
scripts/: inspect_ancestrymap.py  preprocess_csv.py  preprocess_geno.py
src/ancient_dna/: __init__.py  clustering.py  embedding.py  genotopython.py  io.py  preprocess.py  report.py  summary.py  visualize.py
src/ancient_dna.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ancient_dna/tests/: .coverage  conftest.py  test_embedding.py  test_io.py  test_preprocess.py  test_report.py  test_summary.py  test_visualize.py
